[package]
name = "is-unicode-supported"
description = "Checks if the terminal supports Unicode characters or not"
version = "0.1.0"
authors = ["Sean Larkin <TheLarkInn@users.noreply.github.com>"]
repository = "https://github.com/TheLarkInn/is-unicode-supported"
license = "MIT"
categories = ["command-line-utilities"]

[dependencies]
once_cell = "1.17.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html